@@ -1,6 +1,6 @@
 Package: polyCub
 Title: Cubature over Polygonal Domains
-Version: 0.3-1
+Version: 0.3-2
 Date: 2013-08-22
 Authors@R: c(person("Sebastian", "Meyer",
                     email = "Sebastian.Meyer@ifspm.uzh.ch",
